--- a/client/.gitignore
+++ b/client/.gitignore
@@ -1,15 +1,16 @@
-.DS_Store
-node_modules
-/dist
-
-# local env files
-.env.local
-.env.*.local
-
-# Log files
+# Logs
+logs 
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+node_modules
+
+dist-ssr
+*.local
 
 # Editor directories and files
 .idea
@@ -19,3 +20,25 @@ yarn-error.log*
 *.njsproj
 *.sln
 *.sw*
+
+# .DS_Store
+# node_modules
+# /dist
+
+# local env files
+# .env.local
+# .env.*.local
+
+# Log files
+# npm-debug.log*
+# yarn-debug.log*
+# yarn-error.log*
+
+# Editor directories and files
+# .idea
+# # .vscode
+#*.suo
+#*.ntvs*
+#*.njsproj
+#*.sln
+#*.sw*
